
 * The SIPshowpeer manager action response field "SIP-Forcerport" has been
   updated to include information about peers configured with
   nat=auto_force_rport by returning "A" if auto_force_rport is set and nat is
   detected, and "a" if it is set and nat is not detected. "Y" and "N" are still
   returned if auto_force_rport is not enabled.

 * Hangup now can take a regular expression as the Channel option.  If you want
   to hangup multiple channels, use /regex/ as the Channel option.  Existing
   behavior to hanging up a single channel is unchanged, but if you pass a regex,
   the manager will send you a list of channels back that were hung up.

 * Support for IPv6 addresses has been added.

 * AMI Events can now be documented in the Asterisk source. Note that AMI event
   documentation is only generated when Asterisk is compiled using 'make full'.
   See the CLI section for commands to display AMI event information.

 * The AMI Hangup event now includes the AccountCode header so you can easily
   correlate with AMI Newchannel events.

 * The QueueMemberStatus, QueueMemberAdded, and QueueMember events now include
   the StateInterface of the queue member.

 * Added AMI event SessionTimeout in the Call category that is issued when a
   call is terminated due to either RTP stream inactivity or SIP session timer
   expiration.

 * CEL events can now contain a user defined header UserDefType.  See core
   changes for more information.

 * OOH323 ChannelUpdate events now contain a CallRef header.

 * Added PresenceState command.  This command will report the presence state for
   the given presence provider.

 * Added Parkinglots command.  This will list all parking lots as a series of
   AMI Parkinglot events.

 * Added MessageSend command.  This behaves in the same manner as the
   MessageSend application, and is a technolgoy agnostic mechanism to send out
   of call text messages.

 * Added "message" class authorization.  This grants an account permission to